force-app/main/default/objects/SBQQ__ColumnMetadata__c/SBQQ__ColumnMetadata__c.object-meta.xml
<CustomObject>
    <description>Individual sizing for each field on the QuoteLine.</description>
    <label>Column Metadata</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Column Metadata Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Columns Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>