force-app/main/default/objects/SBQQ__ColumnMetadata__c/fields/SBQQ__FieldName__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FieldName__c</fullName>
    <description>The API Name of the field you would like to use.</description>
    <label>Field Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>