force-app/main/default/objects/SBQQ__ColumnMetadata__c/fields/SBQQ__FieldSetMetadata__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FieldSetMetadata__c</fullName>
    <description>Master detail to FieldSet Metadata.</description>
    <inlineHelpText>FieldSet Metadata relationship.</inlineHelpText>
    <label>FieldSet Metadata</label>
    <referenceTo>SBQQ__FieldSetMetadata__c</referenceTo>
    <relationshipLabel>Columns Metadata</relationshipLabel>
    <relationshipName>ColumnsMetadata</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>