force-app/main/default/objects/SBQQ__ColumnMetadata__c/validationRules/SBQQ__ValidateMinimumPixelSize.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__ValidateMinimumPixelSize</fullName>
    <active>true</active>
    <description>Restrict any size that is less than 67 pixels.</description>
    <errorConditionFormula>(SBQQ__FieldColumnSize__c &lt; 67)</errorConditionFormula>
    <errorDisplayField>SBQQ__FieldColumnSize__c</errorDisplayField>
    <errorMessage>Field Column Size cannot be less than 67.</errorMessage>
</ValidationRule>